fix map not showing

--- a/sivut/paastolaskuri/css/style.css
+++ b/sivut/paastolaskuri/css/style.css
@@ -52,14 +52,21 @@ body {
 }
 
 #map-canvas {
-  width: 100%;
+  height: 600px;
+  width: 600px;
+  /* height: 100%;
+  width: 100%; */
+  /* margin-left: 300px; */
 
 }
 
 #map-canvas img {
-  width: 80%;
-  height: 600px;
-  padding-left: 200px;
+  /* width: 80%; */
+  /* width: 800px;
+  height: 600px; */
+  width: 100%;
+  height: 100%;
+  /* padding-left: 200px; */
 
 }
 
